# Flight-Simulator

./: CMakeLists.txt  Command.cpp  Command.h  Ex1.h  Ex3.h  Expression.h  Interpreter.cpp  Lexer.cpp  Lexer.h  Minus.cpp  Mul.cpp  Parser.cpp  Parser.h  README.md  Singelton.h  Token.cpp  Token.h  UMinus.cpp  UnaryOperator.cpp  Variable.cpp  fly.txt  main.cpp
Ex1/: BinaryOperator.cpp  BooleanExpression.cpp  Div.cpp  Ex1.h  Interpreter.cpp  Plus.cpp  UPlus.cpp  Value.cpp  Variable.cpp
